--- a/templates/auth.html
+++ b/templates/auth.html
@@ -10,7 +10,7 @@
     <span>Password:</span>
     <input id="password" name="password" type="password">
   </label>
-  <button>Submit</button>
+  <button class="px-4 py-2 rounded-md bg-blue-500 text-white font-bold">Submit</button>
   <div id="error"></div>
 </form>
 
